<resources>
    <string name="app_name">EpidemyControl</string>
    <string name="logodesc">LogoAPP</string>
    <string name="hintUser">Username</string>
    <string name="hintPass">Password</string>
    <string name="btnLogin">Login</string>
    <string name="RegisterLogin">Registrate aqui</string>
    <string name="registerText">Datos de Registro</string>
    <string name="hintEmail">Email</string>
    <string name="registerBirth">Birthday</string>
    <string name="registerBtn">Registrarse</string>
    <string name="title_activity_main">EpidemyControl</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
